# approval-service

./: .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202607070001_initial.py
app/: auth.py  config.py  database.py  enums.py  main.py  models.py  repositories.py  schemas.py  services.py
app/api/: routes.py
app/utils/: sanitization.py
tests/: conftest.py  test_api.py
